@@ -1,14 +1,8 @@
 ---
 fixtures:
   repositories:
-    iptables:
-      repo: https://github.com/simp/pupmod-simp-iptables
-      ref: 6.0.1
-    simplib:
-      repo: https://github.com/simp/pupmod-simp-simplib
-      ref: 3.9.1
-    stdlib:
-      repo: https://github.com/simp/puppetlabs-stdlib
-      ref: 4.13.1
+    iptables: https://github.com/simp/pupmod-simp-iptables
+    simplib: https://github.com/simp/pupmod-simp-simplib
+    stdlib: https://github.com/simp/puppetlabs-stdlib
   symlinks:
     tpm2: "#{source_dir}"
